<resources>
    <string name="app_name">Testahil</string>
    <string name="map_api_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>

    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">I don’t have an account</string>
    <string name="login2">login</string>

    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

    <string name="all_services_are_reserved_for_homecare_app">All rights are reserved for this App</string>


    <string name="skip">skip</string>

    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>

    <string name="next">Next</string>
    <string name="Categories">Categories</string>
    <string name="comments">Comment</string>
    <string name="call">Call</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>
    <string name="register">register</string>

    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="adversiment_detials">Advertisement Details</string>
    <string name="share_in">Share in</string>
    <string name="like">Like</string>
    <string name="report">Report</string>
    <string name="commentss">Comments</string>
    <string name="more_comments">More Comments</string>
    <string name="show_all">Show All</string>
    <string name="filter">Filter</string>

    <string name="enter_phone_number">Enter phone number</string>
    <string name="code">Code</string>
    <string name="enter_ph_in_en">Enter your number without the country code in english</string>
    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your email address</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>

    <string name="no_comments">No comments</string>
    <string name="no_phone">No phone number</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="no_name">No name</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>

    <string name="view">View</string>
    <string name="sign_out">Sign out</string>
    <string name="city">City</string>

    <string name="ch_city">Choose city</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to display</string>

    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">Minute Ago</string>
    <string name="min">Minute</string>
    <string name="an_hour_ago">An Hour Ago</string>
    <string name="hs">Hour</string>
    <string name="yesterday">Yesterday</string>
    <string name="day">day</string>
    <string name="type_a_message">type a message....</string>
    <string name="img_sent">image sent</string>
    <string name="search">Search....</string>
    <string name="pas_short">Password to short</string>
    <string name="re_password">Re-password</string>
    <string name="pas_not_match">Password not match</string>
    <string name="verification_code">Verification code</string>
    <string name="favorite">Favorite</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="offers">Offers</string>
    <string name="nearby">NearBy</string>
    <string name="setting">More</string>
    <string name="rate_app">Rate App</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="disable_all">Disable All</string>
    <string name="order_by">Order By</string>
    <string name="merchant_branch">Merchant branch</string>
    <string name="merchant_online">Merchant online</string>
    <string name="cities">Cities</string>
    <string name="search2">Search</string>
    <string name="store_name">Store name</string>
    <string name="work_type">Work type</string>
    <string name="responsible_name">Responsible name(optional)</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="all">All</string>
    <string name="inv_email_pass">Invalid email or password</string>
    <string name="user_blocked">User blocked</string>
    <string name="ch_cat_type">Choose category type</string>
    <string name="family_offer">Family offer</string>
    <string name="individual_offer">Individual offer</string>
    <string name="offer">Offer</string>
    <string name="special_offer">Special Offer</string>
    <string name="offer_details">Offer Details</string>
    <string name="how_to_use">How to use</string>
    <string name="address">Address</string>
    <string name="merchant_info">Merchant Info</string>
    <string name="location">Location</string>
    <string name="have_a_problem">Have a problem ?</string>
    <string name="hello">Hello</string>
    <string name="new_account">new registration</string>
    <string name="thanx">Thank you for contacting us</string>
    <string name="country_code">Country code</string>
    <string name="settings">Settings</string>
    <string name="signup2">Sign Up</string>
    <string name="have_account">Have Account</string>
    <string name="language">Language</string>
    <string name="profile2">Profile</string>
    <string name="name">name</string>

</resources>
