<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ch"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />
        </FrameLayout>


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/gray5"
            android:textSize="15sp" />

    </LinearLayout>
</layout>
