<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.technology.circles.apps.testahil.models.ProductModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/small_rounded_white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merchant_info"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textColor="@color/gray5"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text='@{model.company_title}'
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textColor="@color/gray5"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"

                    android:linksClickable="true"
                    android:text='@{model.company.email}'
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone"
                    android:textColor="@color/gray5"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:text='@{model.company.phone}'
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:linksClickable="true"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/address"
                    android:textColor="@color/gray5"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:text='@{model.company.address+"\n"+model.company.location}'
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
