<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.technology.circles.apps.testahil.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />

        <variable
            name="contactUs"
            type="com.technology.circles.apps.testahil.models.ContactUsModel" />

        <variable
            name="contactListener"
            type="com.technology.circles.apps.testahil.interfaces.Listeners.ContactListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/contact_us"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <EditText
                    error="@{contactUs.error_name}"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/small_rounded_white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@={contactUs.name}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <EditText
                    error="@{contactUs.error_email}"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/small_rounded_white"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@={contactUs.email}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/small_rounded_white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="+966"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />

                    <EditText
                        error="@{contactUs.error_phone}"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/white"
                        android:inputType="number"
                        android:maxLength="9"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:text="@={contactUs.phone}"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <EditText
                    error="@{contactUs.error_message}"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/small_rounded_white"
                    android:gravity="top"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@={contactUs.message}"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_bg"
                    android:onClick="@{()->contactListener.sendContact(contactUs)}"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
